# konrul

./: LICENSE.txt  README.md  pyproject.toml
konrul/: channel.py  push.py  socket.py
konrul/transport/: websocket.py
