[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "konrul"
description = "A phoenix-compatible channels client for Python"
readme = "README.md"
requires-python = ">=3.7"
license = "0BSD"
keywords = []
authors = [
  { name = "Isaac Tepper", email = "github@exocron.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "websockets",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/exocron/konrul#readme"
Issues = "https://github.com/exocron/konrul/issues"
Source = "https://github.com/exocron/konrul"

[tool.hatch.version]
path = "konrul/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=konrul --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "konrul/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
